--- a/Tests/Tests.fsproj
+++ b/Tests/Tests.fsproj
@@ -6,6 +6,7 @@
     <ProjectReference Include="..\AdventOfCode2018.fsproj" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Day03 tests.fs" />
     <Compile Include="Day02 tests.fs" />
     <Compile Include="Day01 tests.fs" />
   </ItemGroup>
