--- a/AdventOfCode2018.fsproj
+++ b/AdventOfCode2018.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Day07.fs" />
     <Compile Include="Day06.fs" />
     <Compile Include="Day05.fs" />
     <Compile Include="Day04.fs" />
@@ -11,6 +12,9 @@
     <Compile Include="Day02.fs" />
     <Compile Include="Day01.fs" />
     <Compile Include="Program.fs" />
+    <Content Include="Data/day07.input">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Data/day06.input">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
